### CHANGES TO MTurkR 0.4 ###

## BUG FIXES ##
* Fixed bug in GenerateHTMLQuestion() related to XML encoding. (h/t Alex Neustädter)
* In `request`, corrected `shell.exec` to `browseURL` to be platform-independent


### CHANGES TO MTurkR 0.3.5 ###

## SIGNIFICANT USER-VISIBLE CHANGES ##
* CreateHIT() now provides an option to validate the 'question' parameter for HTMLQuestion, ExternalQuestion, and QuestionForm HIT structures.
* CreateQualificationType() now provides options to validate the 'test' and/or 'answerkey' parameters for QuestionForm and AnswerKey structures, respectively.
* GenerateAnswerKey() was modified to accept slightly different inputs for the 'questions' parameter. A new function, AnswerKeyTemplate(), produces a user-modifiable template (as a list) for that parameter based on a QuestionForm data structure for which an AnswerKey is desired.
* When internal functions (described in the documentation of XMLToDataFrame) that normally return named lists have nothing to translate to a dataframe, they now return named lists with NULL values rather than simply a single NULL.

## BUG FIXES ##
* Fixed bug in GetAssignments() that prevented the return of assignments for an entire HITType or for multiple HITs. Specifically, previous version was retrieving assignments via the API but not returning them to the user. (h/t Robert Vesco)


### CHANGES TO MTurkR 0.3 ###

## SIGNIFICANT USER-VISIBLE CHANGES ##
* To improve speed and reduce the number of API calls, HITsToDataFrame(), which is called by SearchHITs(), GetHIT(), etc., now uses the convenience function ListQualificationTypes() to return the name of QualificationRequirements when applicable.
* Expanded the functionality of ContactWorkers() to allow a 'batch' mode, wherein workers are contacted with generic (i.e., not customized) email messages and subject lines in batches of 100.