@@ -1,5 +1,5 @@
 APIReference <-
 function () 
 {
-    shell.exec("http://docs.amazonwebservices.com/AWSMechTurk/latest/AWSMturkAPI/Welcome.html")
+    browseURL("http://docs.amazonwebservices.com/AWSMechTurk/latest/AWSMturkAPI/Welcome.html")
 }
