@@ -1,5 +1,5 @@
 OpenQualificationPage <-
 function () 
 {
-    shell.exec("https://requester.mturk.com/qualification_types")
+    browseURL("https://requester.mturk.com/qualification_types")
 }
